Improve geo map printing. -Print geojson layers with simple MapLibre styling.