@@ -30,6 +30,7 @@
  */
 package org.santfeliu.webapp.modules.geo.pdfgen;
 
+import com.google.gson.Gson;
 import com.lowagie.text.pdf.PdfGraphics2D;
 import com.lowagie.text.Document;
 import com.lowagie.text.Rectangle;
@@ -45,8 +46,15 @@ import java.awt.geom.AffineTransform;
 import java.awt.geom.Rectangle2D;
 import java.io.File;
 import java.io.FileOutputStream;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -64,6 +72,7 @@ import org.santfeliu.webapp.modules.geo.io.SldStore;
 import org.santfeliu.webapp.modules.geo.metadata.Service;
 import org.santfeliu.webapp.modules.geo.metadata.ServiceParameters;
 import org.santfeliu.webapp.modules.geo.metadata.StyleMetadata;
+import org.santfeliu.webapp.modules.geo.ogc.FeatureDescription;
 import static org.santfeliu.webapp.modules.geo.pdfgen.MapContext.*;
 /**
  *
@@ -128,28 +137,13 @@ public class MapViewNode extends MapRectNode
       layers.addAll(style.getLayers());
       
       System.out.println("style.layers " + layers.size());
-      System.out.println("param.layers " + layerVisibility.length());
+      List<String> visibleLayers = Arrays.asList(layerVisibility.split(","));
+      System.out.println("visible.layers " + visibleLayers);    
       
       for (int i = 0; i < layers.size(); i++)
       {
         Layer layer = layers.get(i);
-        boolean visible = false;
-        if (i < layerVisibility.length())
-        {
-          visible = layerVisibility.charAt(i) == '1';
-          System.out.println(i + ": " + layer.getId() + " " + visible);
-        }
-      }
-      
-      
-      for (int i = 0; i < layers.size(); i++)
-      {
-        Layer layer = layers.get(i);
-        boolean visible = false;
-        if (i < layerVisibility.length())
-        {
-          visible = layerVisibility.charAt(i) == '1';
-        }
+        boolean visible = visibleLayers.contains(layer.getId());
         if (visible)
         {
           drawLayer((PdfGraphics2D)g2d, style, layer, mapBounds, gen, credentials);
@@ -196,7 +190,7 @@ public class MapViewNode extends MapRectNode
       String sourceId = layer.getSource();
 
       StyleMetadata styleMetadata = new StyleMetadata(style);
-
+      
       ServiceParameters serviceParameters =
         styleMetadata.getServiceParameters(sourceId, false);
       if (serviceParameters == null) return;
@@ -209,8 +203,8 @@ public class MapViewNode extends MapRectNode
 
       List<String> layerList = new ArrayList<>();
       List<String> cqlFilterList = new ArrayList<>();
-      List<String> styleList = new ArrayList<>();
-
+      List<String> styleList = new ArrayList<>();      
+      
       mergeLayer(serviceParameters, layer, layerList, styleList, cqlFilterList);
 
       if (layerList.isEmpty()) return;
@@ -222,13 +216,13 @@ public class MapViewNode extends MapRectNode
       if (styles.replace(",", " ").trim().length() == 0) styles = null;
       if (cqlFilters.replace(";", " ").trim().length() == 0) cqlFilters = null;
 
-      System.out.println("Layers: " + layers);
-      System.out.println("Styles: " + styles);
-      System.out.println("CqlFilters: " + cqlFilters);
+      System.out.println(">>> Layers: " + layers);
+      System.out.println(">>> Styles: " + styles);
+      System.out.println(">>> CqlFilters: " + cqlFilters);
 
       String srs = (String)gen.getContext().get(SRS);
 
-      String url = getWmsUrl(service.getUrl(), srs,
+      String url = getWmsUrl(layer, service.getUrl(), srs,
         sld, layers, styles, cqlFilters,
         mapBounds, "application/pdf", svgWidth, svgHeight, credentials);
 
@@ -313,7 +307,7 @@ public class MapViewNode extends MapRectNode
       String serviceUrl = service.getUrl();
       String srs = (String)gen.getContext().get(SRS);
 
-      String url = getWmsUrl(serviceUrl, srs, null, highlightLayer,
+      String url = getWmsUrl(null, serviceUrl, srs, null, highlightLayer,
         highlightStyle, cqlFilter, mapBounds,
         "application/pdf", svgWidth, svgHeight, credentials);
       addPdfLayer(url, g2d, gen);
@@ -410,11 +404,17 @@ public class MapViewNode extends MapRectNode
       (float)matrix[3], (float)matrix[4], (float)matrix[5]);
   }
 
-  private String getWmsUrl(String serviceUrl, String srs,
+  private String getWmsUrl(Layer layer, String serviceUrl, String srs,
     String sld, String layerNames, String styleNames, String cqlFilter,
     Bounds mapBounds, String format, double mapWidth, double mapHeight,
     Credentials credentials)
-  {
+  {    
+    String geoWmts = "/geoserver/gwc/service/wmts";
+    if (serviceUrl.endsWith(geoWmts))
+    {
+      serviceUrl = serviceUrl.replace(geoWmts, "/geoserver/wms");
+    }
+    
     // connect via proxy servlet
     String port = MatrixConfig.getProperty("org.santfeliu.web.defaultPort");
     String contextPath = MatrixConfig.getProperty("contextPath");
@@ -426,36 +426,237 @@ public class MapViewNode extends MapRectNode
      "&height=" + (int)Math.round(mapHeight) + "&srs=" + srs +
      "&TRANSPARENT=true" +
      "&format=" + format;
+    
+    // styles
     if (!StringUtils.isBlank(styleNames))
     {
       url += "&styles=" + styleNames;
     }
+
+    // sld
     if (!StringUtils.isBlank(sld))
     {
       SldStore sldStore = new SldStore();
       String sldUrl = sldStore.getSldUrl(sld);
       url += "&sld=" + sldUrl;
     }
+    else if (layer != null && !layerNames.contains(","))
+    {
+      String layerName = layerNames;
+      String geomType = getGeometryType(serviceUrl, layerName);      
+      String sldBody = getSldFromLayer(layerName, layer, geomType);
+      if (sldBody != null)
+      {
+        url += "&sld_body=" + URLEncoder.encode(sldBody, StandardCharsets.UTF_8);
+      }
+    }
+    
+    // cql filter
     if (!StringUtils.isBlank(cqlFilter))
     {
       try
       {
-        url += "&CQL_FILTER=" + URLEncoder.encode(cqlFilter, "UTF-8");
+        url += "&CQL_FILTER=" + URLEncoder.encode(cqlFilter, StandardCharsets.UTF_8);
       }
       catch (Exception ex)
       {
       }
     }
+    
+    // credentials
     if (credentials != null)
     {
       URLCredentialsCipher urlCredentialsCipher =
         SecurityUtils.getURLCredentialsCipher();
       url = urlCredentialsCipher.putCredentials(url, credentials);
     }
-    System.out.println("URL: " + url);
     return url;
   }
 
+  private String getSldFromLayer(String layerName, Layer layer, String geomType)
+  {
+    Map<String, Object> paint = layer.getPaint();
+    Map<String, Object> layout = layer.getLayout();
+        
+    System.out.println(">>> paint: " + paint);
+    System.out.println(">>> layout: " + layout);
+    System.out.println(">>> geomType: " + geomType);
+        
+    String template = 
+      "<StyledLayerDescriptor version=\"1.0.0\" " +
+        "xmlns=\"http://www.opengis.net/sld\" " +
+        "xmlns:ogc=\"http://www.opengis.net/ogc\">" +
+        "<NamedLayer>" +
+          "<Name>"+ layerName + "</Name>" +
+          "<UserStyle>" +
+            "<FeatureTypeStyle>" +
+              "<Rule>%s</Rule>" +
+            "</FeatureTypeStyle>" +
+          "</UserStyle>" +
+        "</NamedLayer>" +
+      "</StyledLayerDescriptor>";
+  
+    Object value = paint.get("line-color");
+    if (value instanceof String)
+    {
+      String lineColor = (String)value;
+      value = paint.get("line-width");
+      int lineWidth = value instanceof Number ? ((Number)value).intValue() : 1;
+            
+      return template.formatted(
+        "<LineSymbolizer>" +
+          "<Stroke>" +
+            "<CssParameter name=\"stroke\">" + lineColor +"</CssParameter>" +
+            "<CssParameter name=\"stroke-width\">" + lineWidth + "</CssParameter>" +
+          "</Stroke>" +
+        "</LineSymbolizer>");
+    }
+    
+    value = paint.get("fill-color");
+    if (value instanceof String)
+    {
+      String fillColor = (String)value;
+      value = paint.get("fill-opacity");
+      float fillOpacity = value instanceof Number ? 
+        ((Number)value).floatValue() : 1.0f;
+
+      String fillOutlineColor = (String)paint.get("fill-outline-color");
+      if (fillOutlineColor == null) fillOutlineColor = fillColor;
+      
+      return template.formatted(
+        "<PolygonSymbolizer>" +
+          "<Stroke>" +
+            "<CssParameter name=\"stroke\">" + fillOutlineColor +"</CssParameter>" +
+            "<CssParameter name=\"stroke-width\">1</CssParameter>" +
+          "</Stroke>" +
+          "<Fill>" +
+            "<CssParameter name=\"fill\">" + fillColor +"</CssParameter>" +
+            "<CssParameter name=\"fill-opacity\">" + fillOpacity + "</CssParameter>" +
+          "</Fill>" +
+       "</PolygonSymbolizer>");      
+    }
+    
+    value = paint.get("circle-color");
+    if (value instanceof String)
+    {
+      String fillColor = (String)value;
+      value = paint.get("circle-radius");
+      float size = value instanceof Number ? 
+        ((Number)value).floatValue() : 4.0f;
+            
+      return template.formatted(
+        "<PointSymbolizer>" +
+          "<Graphic>" +
+            "<Mark>" +
+              "<WellKnownName>circle</WellKnownName>" +
+              "<Fill>" +
+                "<CssParameter name=\"fill\">" + fillColor +"</CssParameter>" +
+              "</Fill>" +
+            "</Mark>" +
+            "<Size>" + size + "</Size>" +
+          "</Graphic>" +
+        "</PointSymbolizer>");      
+    }
+    
+    value = layout.get("text-field");
+    if (value instanceof List)
+    {
+      List list = (List)value;
+      if (list.size() >= 2)
+      {
+        if ("get".equals(list.get(0)))
+        {
+          value = list.get(1);
+          if (value instanceof String)
+          {
+            String field = (String)value;
+            String placement = "";
+            if (geomType == null) geomType = "Point";
+            if (geomType.contains("Line"))
+            {
+              placement = 
+                "<LinePlacement>" +
+                  "<PerpendicularOffset>0</PerpendicularOffset>" + 
+                "</LinePlacement>";
+            }            
+            else
+            {
+              placement = 
+                "<PointPlacement>" +
+                  "<AnchorPoint>" +
+                    "<AnchorPointX>0.5</AnchorPointX>" +
+                    "<AnchorPointY>0.0</AnchorPointY>" +
+                  "</AnchorPoint>" +
+                  "<Displacement>" +
+                    "<DisplacementX>0</DisplacementX>" +
+                    "<DisplacementY>2</DisplacementY>" +
+                  "</Displacement>" +
+                "</PointPlacement>";
+            }
+            return template.formatted(
+              "<TextSymbolizer>" +
+                "<Label>" +
+                  "<ogc:PropertyName>" + field + "</ogc:PropertyName>" +
+                "</Label>" +
+                "<Font>" +
+                  "<CssParameter name=\"font-family\">Arial</CssParameter>" +
+                  "<CssParameter name=\"font-size\">4</CssParameter>" +
+                "</Font>" +
+                "<LabelPlacement>" +
+                placement +
+                "</LabelPlacement>" +
+                "<Fill>" +
+                  "<CssParameter name=\"fill\">#000000</CssParameter>" +
+                "</Fill>" +
+              "</TextSymbolizer>");      
+          }
+        }
+      }
+    }
+    return null;
+  }
+  
+  private String getGeometryType(String serviceUrl, String layerName)
+  {
+    String url = serviceUrl + "?service=WFS&version=2.0.0&request=DescribeFeatureType&typeNames=" 
+      + layerName + "&outputFormat=application/json";
+    
+    HttpClient client = HttpClient.newHttpClient();
+    HttpRequest request = HttpRequest.newBuilder()
+      .uri(URI.create(url))
+      .GET()
+      .build();
+
+    try
+    {
+      HttpResponse<InputStream> response = client.send(
+        request, HttpResponse.BodyHandlers.ofInputStream());
+
+      try (InputStream is = response.body())
+      {
+        Gson gson = new Gson();
+        FeatureDescription ft = gson.fromJson(
+          new InputStreamReader(is, "UTF-8"), FeatureDescription.class);
+        
+        List<FeatureDescription.Property> properties = 
+          ft.getFeatureTypes().get(0).getProperties();
+        for (FeatureDescription.Property property : properties)
+        {
+          String localType = property.getLocalType();
+          if (localType.contains("Point") ||
+              localType.contains("LineString") ||
+              localType.contains("Polygon") || 
+              localType.contains("Surface"))
+          return localType;
+        }
+      }
+    }
+    catch (Exception ex)
+    {      
+    }
+    return null;
+  }
+  
   public static void main(String[] args)
   {
     try
